Refactored code based on sonar checks