@@ -1,6 +1,6 @@
 package com.caf.automation.web.constants;
 
-import com.caf.automation.web.config.ConfigFactory;
+import com.caf.automation.config.ConfigFactory;
 import com.caf.automation.web.enums.Browser;
 import com.caf.automation.web.enums.RemoteMode;
 import com.caf.automation.web.enums.RunMode;
@@ -8,6 +8,8 @@ import com.caf.automation.web.exception.CustomMalformedURLException;
 import com.caf.automation.web.utils.EncryptDecryptUtils;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 
@@ -15,9 +17,9 @@ import java.net.URL;
  * This class provides constant values sourced from the configuration for automation.
  * It includes browser type, base URL, remote mode, run mode, Selenium Grid URL, and BrowserStack credentials.
  */
-public final class Constant {
+public final class CentralAutomationFramework {
     // Prevents instantiation of this class as it is meant to provide constants only.
-    private Constant(){}
+    private CentralAutomationFramework(){}
 
     /** The Browser type configured for automation tests. */
     public static final Browser BROWSER = ConfigFactory.getConfig().browser();
@@ -51,10 +53,11 @@ public final class Constant {
         try
         {
             // Constructs the URL using BrowserStack credentials for connecting to their hub.
-            BROWSER_STACK_URL = new URL("https://" + BROWSER_STACK_USERNAME + ":" + BROWSER_STACK_PASSWORD + "@hub-cloud.browserstack.com/wd/hub");
-
+            String userInfo = BROWSER_STACK_USERNAME + ":" + BROWSER_STACK_PASSWORD;
+            URI uri = new URI("https", userInfo, "hub-cloud.browserstack.com", 443, "/wd/hub", null, null);
+            BROWSER_STACK_URL = uri.toURL();
         }
-        catch (MalformedURLException e)
+        catch (URISyntaxException | MalformedURLException e)
         {
             // Throws a custom exception if failed to create the URL.
             throw new CustomMalformedURLException("Failed to create BROWSER_STACK_URL", e);
